--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -38,6 +38,9 @@
     <integer name="config_showTemperatureWarning">1</integer>
 
     <!-- Whether to show a alarm dialog when device's usb port is overheating. -->
-    <integer name="config_showUsbPortAlarm">1</integer>   
+    <integer name="config_showUsbPortAlarm">1</integer> 
+
+    <!-- The CPUs to display in CPUInfoService view -->
+    <string name="config_displayCpus" translatable="false">0,7</string>  
 </resources>
 
