--- a/overlay-lineage/packages/apps/Settings/res/values/custom_config.xml
+++ b/overlay-lineage/packages/apps/Settings/res/values/custom_config.xml
@@ -3,9 +3,9 @@
 <resources>
 
     <!-- Battery Health -->
-    <string name="config_batChargeCycle">/sys/class/power_supply/bms/cycle_count</string>
-    <string name="config_batDesCap">/sys/class/power_supply/bms/charge_full_design</string>
-    <string name="config_batCurCap">/sys/class/power_supply/bms/charge_counter</string>
+    <string name="config_batteryCalculatedCapacity">/sys/class/power_supply/bms/charge_counter</string>
+    <string name="config_batteryDesignCapacity">/sys/class/power_supply/bms/charge_full_design</string>
+    <string name="config_batteryChargeCycles">/sys/class/power_supply/bms/cycle_count</string>
     <integer name="config_batCurCapDivider">1000</integer>
     <integer name="config_batDesCapDivider">1000</integer>
     <bool name="config_supportBatteryHealth">true</bool>
