--- a/overlay-lineage/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-lineage/frameworks/base/core/res/res/values/custom_config.xml
@@ -15,6 +15,10 @@
      for different hardware and product builds.  Do not translate. -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+     <!-- Pocket Lock -->
+    <bool name="config_pocketModeSupported">false</bool>
+    <bool name="config_pocketUseLightSensor">false</bool>
+
     <!-- Does the battery LED support multiple colors? Used to decide if the user can change the colors -->
     <bool name="config_multiColorBatteryLed">true</bool>
 
