--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -39,4 +39,7 @@
 
 	<!-- <bool name="def_mobile_data_on">false</bool> -->
     <bool name="def_mobile_data_always_on">false</bool>
+
+    <!-- Default for Settings.Global.DEVICE_NAME $1=MODEL-->
+    <string name="def_device_name_simple">Lenovo Z6SE</string>
 </resources>
