--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -41,8 +41,11 @@
     <integer name="config_showUsbPortAlarm">1</integer> 
 
     <!-- The CPUs to display in CPUInfoService view -->
-    <string name="config_displayCpus" translatable="false">0,7</string> 
+    <string name="config_displayCpus" translatable="false">0,7</string>
 
+    <!-- The padding on the top of the statusbar -->
+    <dimen name="status_bar_padding_top">4dp</dimen>
+ 
     <!-- Default rounded corner curve (a Bezier). Must match (the curved path in) rounded.xml.
     Note that while rounded.xml includes the entire path (including the horizontal and vertical
     corner edges), this pulls out just the curve. -->
