--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -986,8 +986,10 @@
     <bool name="config_supportDoubleTapWake">true</bool>
 
     <!-- The list of components which should be automatically disabled for a specific package. --> 
-    <string-array name="config_disabledComponents" translatable="false">
+    <string-array name="config_deviceDisabledComponents" translatable="false">
 	<item>com.google.android.googlequicksearchbox/com.google.android.hotword.service.HotwordService</item>
+     <item>com.google.android.gms/.chimera.GmsIntentOperationService$PersistentTrustedReceiver</item>
+     <item>com.google.android.gms/.stats.service.DropBoxEntryAddedReceiver</item>
     </string-array>
 
     <!-- Lockscreen rotation is default disabled into fmwk -->              
