--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -852,38 +852,36 @@
     <!-- Operating volatage for bluetooth controller. 0 by default-->
     <integer name="config_bluetooth_operating_voltage_mv">3300</integer>
 	
-    <!-- Vibrator pattern for feedback about a long screen/key press -->	
-    <integer-array name="config_longPressVibePattern">
-        <item>0</item>
-        <item>47</item>
+    <!-- Vibrator pattern for feedback about touching a virtual key -->
+    <integer-array name="config_virtualKeyVibePattern">
+        <item>15</item>
+        <item>28</item>
+        <item>15</item>
     </integer-array>
 
-    <!-- Vibrator pattern for feedback about touching a virtual key -->	
-    <integer-array name="config_virtualKeyVibePattern">
-        <item>0</item>
-        <item>30</item>
+    <!-- Vibrator pattern for feedback about a long screen/key press -->
+    <integer-array name="config_longPressVibePattern">
+        <item>18</item>
+        <item>36</item>
+        <item>18</item>
     </integer-array>
 	
     <!-- Vibrator pattern for a very short but reliable vibration for soft keyboard tap -->
     <integer-array name="config_keyboardTapVibePattern">
-        <item>25</item>
+        <item>20</item>
     </integer-array>
 
-    <integer-array name="config_defaultNotificationVibePattern">
-        <item>0</item>
-        <item>120</item>
-        <item>200</item>
-        <item>40</item>
+    <!-- Vibrator pattern for feedback about hitting a scroll barrier -->
+    <integer-array name="config_scrollBarrierVibePattern">
+        <item>20</item>
+        <item>10</item>
+        <item>10</item>
     </integer-array>
 
+    <!-- Enables or disables haptic effect when the text insertion/selection handle is moved
+         manually by the user. Off by default, since the expected haptic feedback may not be
+         available on some devices. -->
     <bool name="config_enableHapticTextHandle">true</bool>
-
-    <integer name="config_defaultHapticFeedbackIntensity">3</integer>
-
-    <integer name="config_defaultNotificationVibrationIntensity">3</integer>
-
-    <integer name="config_defaultRingVibrationIntensity">3</integer>
-
 	
     <!-- Default list of files pinned by the Pinner Service -->
     <string-array translatable="false" name="config_defaultPinnerServiceFiles">
