--- a/overlay-lineage/frameworks/packages/SystemUI/res/values/config.xml
+++ b/overlay-lineage/frameworks/packages/SystemUI/res/values/config.xml
@@ -29,5 +29,9 @@
     <string name="config_sysGPUFreq">/sys/kernel/gpu/gpu_clock</string>
     <string name="config_sysGPULoad">/sys/kernel/gpu/gpu_busy</string>
 
+    <!-- The battery current divider, some kernel report current value in mA other in µA.
+         Leave 1 if you have mA, put 1000 if you have µA -->
+    <integer name="config_currentInfoDivider" translatable="false">1</integer>
+
 </resources>
 
