--- a/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
@@ -61,6 +61,22 @@
     <bool name="config_proximityCheckOnWake">false</bool>
     <bool name="config_proximityCheckOnWakeEnabledByDefault">false</bool>
 
+    <!-- The list of package IDs that are allowed to use aux cameras.
+         NOTE: If this list is empty then all apps will be able to use aux cameras. -->
+    <string-array name="config_cameraAuxPackageAllowList" translatable="false" >
+        <item>com.android.MGC</item>
+        <item>com.android.camera</item>
+        <item>com.motorola.motocit</item>
+    </string-array>
+
+    <!-- The list of package IDs that are not allowed to use aux cameras. -->
+    <string-array name="config_cameraAuxPackageExcludeList" translatable="false" >
+        <item>org.telegram.messenger</item>
+        <item>com.exteragram.messenger</item>
+        <item>com.microsoft.teams</item>
+        <item>com.discord</item>
+    </string-array>
+    
     <!-- The list of components which should be automatically disabled for a specific device. -->
     <string-array name="config_deviceDisabledComponents" translatable="false">
         <item>com.google.android.gms/.chimera.GmsIntentOperationService$PersistentTrustedReceiver</item>
