--- a/overlay-aicp/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-aicp/frameworks/base/core/res/res/values/custom_config.xml
@@ -86,6 +86,22 @@
          2: gestures only for back, home and overview -->
     <integer name="config_navBarInteractionMode">2</integer>
 
+     <!-- The list of package IDs that are allowed to use aux cameras.
+          NOTE: If this list is empty then all apps will be able to use aux cameras. -->
+    <string-array name="config_cameraAuxPackageAllowList" translatable="false" >
+        <item>com.android.MGC</item>
+        <item>com.android.camera</item>
+        <item>com.motorola.motocit</item>
+    </string-array>
+
+    <!-- The list of package IDs that are not allowed to use aux cameras. -->
+    <string-array name="config_cameraAuxPackageExcludeList" translatable="false" >
+        <item>org.telegram.messenger</item>
+        <item>com.exteragram.messenger</item>
+        <item>com.microsoft.teams</item>
+        <item>com.discord</item>
+    </string-array>
+
     <!-- Temp nodes -->
     <string name="config_sysCPUTemp">/sys/class/thermal/thermal_zone0/temp</string>
     <string name="config_sysBatteryTemp">/sys/class/power_supply/battery/temp</string>
