--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -879,12 +879,12 @@
 	
     <!-- Default list of files pinned by the Pinner Service -->
     <string-array translatable="false" name="config_defaultPinnerServiceFiles">
-        <item>"/apex/com.android.art/javalib/arm64/boot.oat"</item>
-        <item>"/apex/com.android.art/javalib/arm64/boot.vdex"</item>
+        <item>"system/framework/arm64/boot.oat"</item>
+        <item>"system/framework/arm64/boot.vdex"</item>
         <item>"/system/framework/boot-framework.vdex"</item>
         <item>"/system/framework/framework.jar"</item>
-        <item>"/apex/com.android.art/javalib/arm64/boot-core-libart.oat"</item>
-        <item>"/apex/com.android.art/javalib/arm64/boot-core-libart.vdex"</item>
+        <item>"system/framework/arm64/boot-core-libart.oat"</item>
+        <item>"system/framework/arm64/boot-core-libart.vdex"</item>
         <item>"/system/framework/services.jar"</item>
         <item>"/apex/com.android.art/javalib/core-oj.jar"</item>
         <item>"/apex/com.android.art/javalib/core-libart.jar"</item>
