--- a/overlay-spark/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-spark/frameworks/base/core/res/res/values/custom_config.xml
@@ -84,6 +84,7 @@
     <integer name="config_navBarInteractionMode">2</integer>
 
     <!-- Temp nodes -->
+    <bool name="config_supportSystemInfo">true</bool>
     <string name="config_sysCPUTemp">/sys/class/thermal/thermal_zone0/temp</string>
     <string name="config_sysBatteryTemp">/sys/class/power_supply/battery/temp</string>
     <integer name="config_sysCPUTempMultiplier">1000</integer>
