--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -35,7 +35,7 @@
     <dimen name="status_bar_height_landscape">28dp</dimen>
 
     <!-- Height of area above QQS where battery/time go -->
-    <dimen name="quick_qs_offset_height">68dp</dimen>
+    <!-- <dimen name="quick_qs_offset_height">36dp</dimen> -->
     
     <!-- Total height of QQS (quick_qs_offset_height + 128) -->
     <!-- <dimen name="quick_qs_total_height">162dp</dimen> -->
