--- a/overlay-spark/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-spark/frameworks/base/core/res/res/values/custom_config.xml
@@ -64,6 +64,14 @@
         <item>com.android.settings</item>
     </string-array>
 
+     <string-array name="config_globallyDisabledComponents" translatable="false">
+        <item>com.google.android.gms/com.google.android.gms.update.phone.PopupDialog</item>
+        <item>com.google.android.gms/com.google.android.gms.update.OtaSuggestionSummaryProvider</item>
+        <item>com.google.android.gms/com.google.android.gms.update.SystemUpdateActivity</item>
+        <item>com.google.android.gms/com.google.android.gms.update.SystemUpdateGcmTaskService</item>
+        <item>com.google.android.gms/com.google.android.gms.update.SystemUpdateService</item>
+    </string-array>
+
      <!-- Pocket Lock -->
     <bool name="config_pocketModeSupported">false</bool>
     <bool name="config_pocketUseLightSensor">false</bool>
